--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "homepage": "https://marker6275.github.io/website/",
+  "homepage": "https://marker6275.github.io/website",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
