--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.11"
