initial resume page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "router-dom": "^2.2.11"
+    "router-dom": "^2.2.11",
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.6.0",
-    "tailwindcss": "^3.3.3"
+    "html-webpack-plugin": "^5.6.0"
   }
 }
