--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "website-nextjs",
+  "name": "website",
   "version": "1.0.0",
+  "homepage": "https://www.mark-li.com",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "axios": "^1.11.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@emailjs/browser": "^4.4.1",
-    "axios": "^1.11.0",
     "react-responsive": "^10.0.1"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.11",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21",
     "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.4",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
