--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.11.0",
+    "googleapis": "^154.1.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
