--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "googleapis": "^154.1.0",
+    "gsap": "^3.13.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.4",
