--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "bun run build",
-    "deploy": "gh-pages -d out --dotfiles"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -28,7 +26,6 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.5.11",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   }
