--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "homepage": "https://www.mark-li.com",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "googleapis": "^154.1.0",
